# Bevy-3d-Shooter

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
assets/maps/: test.map
avian_bullet_trajectory/: Cargo.toml
egui_editor/: Cargo.toml
egui_editor/src/: egui_test.rs  lib.rs  ui_test.rs
egui_editor/src/infinite_grid/: grid.wgsl  render.rs
shooter/: Cargo.toml
shooter/src/: audio.rs  dev_tools.rs  lib.rs
shooter/src/demo/: debug.rs  level.rs  mod.rs  player.rs
shooter/src/menus/: credits.rs  mod.rs  pause.rs
shooter/src/screens/: gameplay.rs  mod.rs  splash.rs
shooter/src/theme/: mod.rs
src/: audio.rs  dev_tools.rs  main.rs
src/demo/: animation.rs  bullet_trajectory.rs  debug.rs  level.rs  mod.rs  movement.rs  player.rs  target.rs
src/menus/: credits.rs  pause.rs  settings.rs
src/screens/: splash.rs
src/theme/: interaction.rs
