[package]
name = "shooter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
avian_bullet_trajectory.workspace = true
avian3d.workspace = true
bevy.workspace = true
bevy_enhanced_input.workspace = true
bevy_ui_anchor.workspace = true
bevy-tnua.workspace = true
bevy_trenchbroom.workspace = true
tracing.workspace = true
